force-app/main/default/objects/Deal_Closed__e/Deal_Closed__e.object-meta.xml
<CustomObject>
    <description
  >Fired when an Opportunity is set to Closed Won; drives order/contract and provisioning automation.</description>
    <label>Deal Closed</label>
    <pluralLabel>Deal Closed Events</pluralLabel>
</CustomObject>