force-app/main/default/objects/Deal_Closed__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Id of the Account on the closed Opportunity.</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>