force-app/main/default/objects/Deal_Closed__e/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual recurring revenue of the closed deal.</description>
    <label>ARR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>