force-app/main/default/objects/Deal_Closed__e/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Timestamp the Opportunity was marked Closed Won.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>