force-app/main/default/objects/Deal_Closed__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>15- or 18-char Id of the closed Opportunity.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>