force-app/main/default/objects/Deal_Closed__e/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <description
  >Sales motion behind the deal (e.g. New Logo, Expansion, Renewal).</description>
    <label>Sales Motion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>