force-app/main/default/objects/Deal_Closed__e/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description
  >Customer segment of the Account at close (e.g. Enterprise, SMB).</description>
    <label>Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>